# sentinel-iq-cmpass-nasa-rul-prediction

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHAT_SUMMARY.md  CONTRIBUTING.md  DATA_DESCRIPTION.md  DEPLOYMENT_GUIDE.md  Dockerfile  INSTALLATION.md  LICENSE  MODEL_DETAILS.md  Makefile  README.md  UI_UX_DESIGN_STRATEGY.md  cleanup_routes.sh  docker-compose.yml  entrypoint.sh  generate_test_datasets.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
configs/: model_config.yaml  training_config.yaml
data/: README.md
db/: schema.sql
docs/: api_reference.md  architecture.md
frontend/: package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnomalyAlertsPanel.tsx  AuthGuard.tsx  DashboardLayout.tsx  EngineCard.tsx  MaintenanceGanttChart.tsx  MaintenanceTable.tsx  PageHeader.tsx  PredictForm.tsx  RULTrendChart.tsx  SHAPChart.tsx  Sidebar.tsx  StatCard.tsx  Topbar.tsx
frontend/src/lib/: api.ts  (+1 more)
ml_server/: __init__.py  main.py
ml_server/db/: __init__.py  crud.py  engine.py  models.py
ml_server/routers/: __init__.py  anomaly.py  health.py  history.py  maintenance.py  predict.py
ml_server/schemas/: __init__.py  requests.py  responses.py
ml_server/services/: __init__.py  inference.py
models/: anomaly_detector.pkl  lstm_best.pth  production_model.pth  tcn_best.pth
nginx/: nginx.conf
notebooks/: 01_data_exploration.ipynb  01_data_exploration.nbconvert.ipynb  02_feature_engineering.ipynb  02_feature_engineering.nbconvert.ipynb  03_model_evaluation.ipynb  03_model_evaluation.nbconvert.ipynb  README.md
notebooks/models/: autoencoder.pth
pipeline/: sentineliq_ml_pipeline.py
reports/: README.md
src/: anomaly.py  config.py  data_loader.py  drift.py  evaluator.py  explainer.py  features.py  models.py  rca.py  scheduler.py  trainer.py
src/data/: __init__.py  data_loader.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  evaluator.py  models.py  predict.py  trainer.py
src/visualization/: __init__.py  visualize.py
test_datasets/: README.md  sentineliq_test_FD001_style_sample.csv  sentineliq_test_FD003_style_sample.csv  synthetic_cmapss_fd001.csv
tests/: __init__.py  test_data.py  test_features.py  test_models.py
(+24 files in other folders)
